zed/tree-sitter-neoc/grammar.js
    source_file: $ => repeat($._statement),

    // Statements grow with each phase.
    _statement: $ => choice(
      $.import_statement,
      $.export_statement,
      $.type_alias,
      $.attributed_declaration,
      $.function_declaration,
      $.struct_declaration,
      $.tuple_struct_declaration,
      $.impl_declaration,
      $.trait_declaration,
      $.return_statement,
      $.variable_declaration,
      $.if_statement,
      $.statement_block,
      seq($._expression, ';'),
    ),

    // ----- attributes -----------------------------------------------

    // `#[a, b(x), c("y", 1)]` — one bracket block holds one or more
    // comma-separated attribute items. Each item is a name plus
    // optional call-shaped arguments. Multiple bracket blocks can
    // stack on a declaration.
    attribute: $ => seq(
      '#',
      '[',
      commaSep1($.attribute_item),
      ']',
    ),

    attribute_item: $ => seq(
      field('name', $.identifier),
      optional(field('arguments', $.attribute_arguments)),
    ),

    attribute_arguments: $ => seq(
      '(',
      commaSep($._attribute_value),
      ')',
    ),

    _attribute_value: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.identifier,
      $.attribute_call,
    ),

    // Nested call inside attribute args — supports patterns like
    // `#[default(SomeFactory())]`.
    attributed_declaration: $ => seq(
      repeat1($.attribute),
      choice(
        $.struct_declaration,
        $.impl_declaration,
        $.trait_declaration,
        $.function_declaration,
      ),
    ),

    // ----- top-level declarations -----------------------------------

    function_declaration: $ => seq(
      optional('pub'),
      optional('async'),
      'fn',
      field('name', $.identifier),
      optional(field('generics', $.type_parameters)),
      field('parameters', $.arrow_parameters),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.statement_block),
    ),

    struct_declaration: $ => seq(
      optional('pub'),
      'struct',
      field('name', $.type_identifier),
      optional(field('generics', $.type_parameters)),
      field('body', $.struct_body),
    ),

    // Rust-style newtype shorthand: `struct ProductId(string)` desugars
    // to a single-field struct named `value`. No attribute slots on the
    // field — use the block form when constraints are needed.
    tuple_struct_declaration: $ => seq(
      optional('pub'),
      'struct',
      field('name', $.type_identifier),
      '(',
      field('tuple_type', $._type),
      ')',
    ),

    struct_body: $ => seq(
      '{',
      commaSep($.struct_field),
      '}',
    ),

    struct_field: $ => seq(
      repeat($.attribute),
      field('name', $.identifier),
      optional('?'),
      ':',
      field('type', $._type),
    ),

    impl_declaration: $ => seq(
      optional('pub'),
      'impl',
      // Two forms:
      //   impl <Target>                 ← inherent
      //   impl <Trait>[<args>] for <Target>  ← trait impl
      field('first', $.type_identifier),
      optional(field('trait_args', $.type_arguments)),
      optional(seq('for', field('target', $.type_identifier))),
      field('body', $.impl_body),
    ),

    impl_body: $ => seq(
      '{',
      repeat($.impl_method),
      '}',
    ),

    impl_method: $ => seq(
      repeat($.attribute),
      optional('async'),
      field('name', $.identifier),
      optional(field('generics', $.type_parameters)),
      field('parameters', $.arrow_parameters),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.statement_block),
    ),

    trait_declaration: $ => seq(
      optional('pub'),
      'trait',
      field('name', $.type_identifier),
      optional(field('generics', $.type_parameters)),
      field('body', $.trait_body),
    ),

    trait_body: $ => seq(
      '{',
      repeat($.trait_method),
      '}',
    ),

    trait_method: $ => seq(
      optional('async'),
      field('name', $.identifier),
      optional(field('generics', $.type_parameters)),
      field('parameters', $.arrow_parameters),
      optional(seq('->', field('return_type', $._type))),
      // Required signature ends in `;`; default method has a body.
      choice(';', field('body', $.statement_block)),
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';',
    ),

    variable_declaration: $ => seq(
      choice('let', 'const'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      // Trailing `;` is optional — newlines terminate the statement.
      // Without this, tree-sitter's error recovery would extend the
      // declaration's span across line breaks into the next statement,
      // and lowerings like `?` would splice over code that should run.
      optional(';'),
    ),

    type_alias: $ => seq(
      optional('pub'),
      'type',
      field('name', $.type_identifier),
      optional($.type_parameters),
      '=',
      field('value', $._type),
      ';',
    ),

    _type: $ => choice(
      $.union_type,
      $._primary_type,
    ),

    union_type: $ => prec.left(1, seq(
      $._primary_type,
      repeat1(seq('|', $._primary_type)),
    )),

    _primary_type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.named_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.object_type,
      $.string,
      $.number,
      $.boolean,
      $.null_literal,
      $.undefined_literal,
      $.self_type,
    ),

    primitive_type: $ => choice(
      // Lua-aligned primitives, named the way Rust does where the names line up.
      // `number` covers all numeric values (Lua has no int/float split).
      'string', 'number', 'bool', 'table', 'void',
    ),

    named_type: $ => $.type_identifier,

    // `Self` is a reserved type token in neoc. The bare literal
    // string lets tree-sitter's reserved-word machinery exclude
    // `Self` from `type_identifier` matches automatically.
    self_type: $ => 'Self',

    generic_type: $ => seq(
      field('name', $.type_identifier),
      field('arguments', $.type_arguments),
    ),

    type_arguments: $ => seq(
      '<',
      commaSep1($._type),
      '>',
    ),

    array_type: $ => prec(2, seq(
      $._primary_type,
      '[',
      ']',
    )),

    tuple_type: $ => seq(
      '[',
      commaSep($._type),
      ']',
    ),

    function_type: $ => prec.right(seq(
      '(',
      commaSep($.type_parameter_decl),
      ')',
      '=>',
      $._type,
    )),

    // Used inside `(a: T, b: T) => U` function-type parameter lists.
    // Distinct from `type_parameters` (which is the `<T, U>` generic
    // declaration list) — kept separate to keep highlighting clean.
    type_parameter_decl: $ => seq(
      field('name', $.identifier),
      optional('?'),
      ':',
      field('type', $._type),
    ),

    object_type: $ => seq(
      '{',
      repeat(seq(
        $.property_signature,
        choice(',', ';'),
      )),
      optional($.property_signature),
      '}',
    ),

    property_signature: $ => seq(
      optional('readonly'),
      field('name', $.identifier),
      optional('?'),
      ':',
      field('type', $._type),
    ),

    // Generic declaration list — used by structs, traits, type aliases:
    //   `struct Map<K, V> { … }`
    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      '>',
    ),

    type_parameter: $ => seq(
      field('name', $.type_identifier),
      optional(seq('extends', $._type)),
      optional(seq('=', $._type)),
    ),

    // Lower lexer precedence than literal keyword tokens like `Self`
    // so the bare token `Self` always wins as `self_type`.
    type_identifier: $ => token(prec(-1, /[A-Z][A-Za-z0-9_]*/)),

    // ----- imports / exports -----------------------------------------

    import_statement: $ => seq(
      'import',
      optional('type'),
      $.import_clause,
      'from',
      field('source', $.string),
      ';',
    ),

    import_clause: $ => choice(
      $.named_imports,
      $.namespace_import,
      seq(
        field('default', $.identifier),
        optional(seq(',', $.named_imports)),
      ),
    ),

    named_imports: $ => seq(
      '{',
      commaSep($.import_specifier),
      optional(','),
      '}',
    ),

    namespace_import: $ => seq(
      '*',
      'as',
      $.identifier,
    ),

    import_specifier: $ => seq(
      optional('type'),
      field('name', $.identifier),
      optional(seq('as', field('alias', $.identifier))),
    ),

    export_statement: $ => choice(
      // re-export: `export { x } from "..."` / `export * from "..."`
      seq(
        'export',
        choice(
          $.named_imports,
          seq('*', optional(seq('as', $.identifier))),
        ),
        'from',
        field('source', $.string),
        ';',
      ),
      // plain bare re-export: `export { x };`
      seq(
        'export',
        $.named_imports,
        ';',
      ),
    ),

    // ----- expressions -----------------------------------------------

    _expression: $ => choice(
      $.assignment_expression,
      $._right_expression,
    ),

    // "Right-hand" expressions: anything that can appear on the RHS
    // of an assignment, in an argument position, etc.
    _right_expression: $ => choice(
      $.match_expression,
      $.ternary_expression,
      $.try_expression,
      $.range_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.member_expression,
      $.subscript_expression,
      $.parenthesised_expression,
      $.arrow_function,
      $.array_literal,
      $.object_literal,
      $.block_expression,
      $.template_string,
      $.identifier,
      $.number,
      $.string,
      $.boolean,
      $.null_literal,
      $.undefined_literal,
    ),

    // ----- block expression ----------------------------------------
    //
    // Rust-style `{ stmt; stmt; final-expression }` — a brace-wrapped
    // sequence of statements whose final, terminator-less expression
    // is the value the block evaluates to. Lowering wraps it in a
    // Lua IIFE so it stays an expression in the target. The form
    // requires at least one statement so that bare `{ x = v, y = v }`
    // tables written in opaque Lua bodies don't accidentally match —
    // those have no `;` and no leading statement, so they parse as
    // object_literal (when shaped like one) or fall through to an
    // ERROR. Lower precedence than object_literal keeps `{ a: 1 }`
    // parsing as an object.
    block_expression: $ => prec(-1, seq(
      '{',
      repeat1($._statement),
      field('final', $._expression),
      '}',
    )),

    // ----- try (postfix `?`) expression -----------------------------
    //
    // `expr?` — Rust-style early-return on `Err`. Binds tighter than
    // the ternary `cond ? then : else` so that `foo()? : bar` always
    // parses as a try followed by a syntax error rather than an
    // ambiguous ternary. Tree-sitter's GLR still tries the ternary
    // branch when a `:` follows; the precedence below tips the
    // decision toward `try_expression` whenever the trailing `:` is
    // absent.
    try_expression: $ => prec(12, seq(
      $._right_expression,
      '?',
    )),

    // ----- range expression -----------------------------------------
    //
    // `start..end`  — exclusive on the right (Rust convention).
    // `start..=end` — inclusive on the right.
    //
    // Sits below comparison (6) but above arithmetic (7) so
    // `a + 1 .. b * 2` parses as `(a + 1)..(b * 2)`.
    match_expression: $ => seq(
      'match',
      field('scrutinee', $._right_expression),
      '{',
      commaSep($.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('body', $._expression),
    ),

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.struct_pattern,
      $.object_pattern,
      $.literal_pattern,
      $.binding_pattern,
    ),

    wildcard_pattern: $ => '_',

    // PascalCase identifier — optionally followed by a struct-shaped
    // body of field bindings. `BadNumber { input }` matches when the
    // scrutinee carries the BadNumber brand and binds `input`.
    struct_pattern: $ => seq(
      field('name', $.type_identifier),
      optional(field('body', $.pattern_body)),
    ),

    // Plain object pattern — for matching unbranded discriminated
    // unions like Result. `{ ok: true, value }` checks `ok === true`
    // and binds `value`.
    object_pattern: $ => $.pattern_body,

    pattern_body: $ => seq(
      '{',
      commaSep($._pattern_entry),
      '}',
    ),

    _pattern_entry: $ => choice(
      $.pattern_check,
      $.pattern_bind,
      $.pattern_shorthand,
    ),

    pattern_check: $ => seq(
      field('key', $.identifier),
      ':',
      field('value', choice($.string, $.number, $.boolean, $.null_literal, $.undefined_literal)),
    ),

    pattern_bind: $ => seq(
      field('key', $.identifier),
      ':',
      field('binding', $.identifier),
    ),

    pattern_shorthand: $ => $.identifier,

    literal_pattern: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.null_literal,
      $.undefined_literal,
    ),

    // A camelCase-style identifier binds the whole scrutinee for the
    // arm. PascalCase identifiers are reserved for struct patterns
    // (see `struct_pattern` above) — so the lexer needs a separate
    // token kind for them. Lower lexer precedence on the regex so
    // any literal keyword wins ties.
    assignment_expression: $ => prec.right(1, seq(
      field('left', choice($.identifier, $.member_expression, $.subscript_expression)),
      choice('=', '+=', '-=', '*=', '/=', '%=', '||=', '&&=', '??='),
      field('right', $._expression),
    )),

    ternary_expression: $ => prec.right(2, seq(
      field('cond', $._right_expression),
      '?',
      field('then', $._right_expression),
      ':',
      field('else', $._right_expression),
    )),

    binary_expression: $ => choice(
      prec.left(3, seq($._right_expression, '||', $._right_expression)),
      prec.left(3, seq($._right_expression, '??', $._right_expression)),
      prec.left(4, seq($._right_expression, '&&', $._right_expression)),
      prec.left(5, seq($._right_expression, choice('==', '!=', '===', '!=='), $._right_expression)),
      prec.left(6, seq($._right_expression, choice('<', '>', '<=', '>='), $._right_expression)),
      prec.left(7, seq($._right_expression, choice('+', '-'), $._right_expression)),
      prec.left(8, seq($._right_expression, choice('*', '/', '%'), $._right_expression)),
    ),

    unary_expression: $ => prec(9, seq(
      choice('!', '-', '+', 'typeof', 'await', '...'),
      $._right_expression,
    )),

    call_expression: $ => prec(10, seq(
      field('function', $._right_expression),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')',
    ),

    member_expression: $ => prec(11, seq(
      field('object', $._right_expression),
      choice('.', '?.'),
      field('property', $.identifier),
    )),

    subscript_expression: $ => prec(11, seq(
      field('object', $._right_expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    parenthesised_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    arrow_function: $ => prec.right(seq(
      field('parameters', choice(
        $.identifier,
        $.arrow_parameters,
      )),
      '=>',
      field('body', choice(
        $._expression,
        $.statement_block,
      )),
    )),

    shorthand_property: $ => $.identifier,

    null_literal: $ => 'null',
